--- a/HTML-CSS-Bootstrap/firstWebpage.html
+++ b/HTML-CSS-Bootstrap/firstWebpage.html
@@ -18,5 +18,89 @@
             <li>iPhone 17 Pro  /  256GB / 512GB / 1TB</li>
             <li>Height:    Width:    Depth:</li>
         </ul>
+        <div>
+            <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil expedita doloremque praesentium animi, eligendi officiis quaerat voluptatem nesciunt vitae non!</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, placeat.</p>
+            <span>Lorem, ipsum dolor.</span>
+        </div>
+        <b>Bold content</b>
+        <i>Italic</i>
+        <span>Span Inline element</span>
+        <sup>*</sup>
+        log<sub>2</sub>
+        <em>dfghjkl;'</em>
+        <strong>Strong element</strong>
+        <hr />
+        <br />
+        <hr />
+
+        <pre>
+            Elements are divided by 
+            block Elements                 inline Elements
+
+            div, p, Heading Elements,       img, span , b,em,sub, sup, 
+            ul, li, 
+
+
+
+
+            semantic Elements                       nonsemantic Elements
+
+            p, heading Elements, ul, b, i,em,        div, <span> </span>
+
+
+            Layout Elements 
+
+            nav header main footer aside section article form 
+
+        </pre>
+        <a href="https://www.google.com" target="_blank">Go to google</a>
+        <a href="https://wisdomsprouts.in/" target="_self">Wisdom sprouts</a>
+
+
+<ul>
+    <li>Coffee</li>
+    <ul>
+        <li>Cold Coffee</li>
+        <li>Hot coffee</li>
+    </ul>
+    <li>Tea</li>
+    <ul>
+        <li>Green Tea</li>
+        <li>Lemon Tea</li>
+        <li>Black tea</li>
+    </ul>
+    <li>Milk</li>
+    <li>Juice</li>
+</ul>
+
+
+
+<ol type="i" start="51">
+    <li>Fruits</li>
+    <ul>
+        <li>Orange</li>
+        <li>Apple</li>
+    </ul>
+    <li>Vegetables</li>
+    <ol type="A">
+        <li>Spinach</li>
+        <li>LadyFinger</li>
+    </ol>
+    <li>Kirana</li>
+    <ul>
+        <li>Salt</li>
+        <li>Sugar</li>
+    </ul>
+</ol>
+
+<dl>
+    <dt>HTML</dt>
+    <dd>Hyper Text Markup Language</dd>
+    <dt>CSS</dt>
+    <dd>Cascading Style Sheet</dd>
+</dl>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat hic velit consequatur expedita exercitationem blanditiis omnis quos ipsum saepe dolores? Eligendi necessitatibus aperiam quisquam, in consequatur esse id aliquid labore.</p>
+
 </body>
 </html>
