--- a/HTML-CSS-Bootstrap/naturalIceCreameClone/index.html
+++ b/HTML-CSS-Bootstrap/naturalIceCreameClone/index.html
@@ -16,7 +16,7 @@
             <div class="leftImg">
                 <img src="./assets/logo.png" alt="logo" class="logo"/>
                 <div class="btnContainer">
-                <button class="greenBTN ">Order Now</button>
+                <a class="greenBTN " href="#orderHere">Order Now</a>
                 </div>
             </div>
             <div class="rightSearch">
@@ -38,5 +38,45 @@
         </ul>
     </nav>
 
+
+<section class="youtubeVideo">
+    <div class="youtube">
+       <h2> "If I want to sell ice cream, I will invest in trees."</h2>
+<p>- Late Shri Raghunandan Kamath, Founder, Naturals Ice cream</p>
+<iframe src="https://www.youtube.com/embed/g8Y78Ct-8_M?si=oqkrSb7gWCWQV409" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+</section>
+
+
+<section id="threeImages">
+    <div class="ImagesThree">
+        <img src="./assets/imgOne.jpeg" alt="" class="imgThree" />
+        <img src="./assets/imgTwo.jpeg" alt="" class="imgThree" />
+        <img src="./assets/imgThree.jpeg" alt="" class="imgThree" />
+    </div>
+</section>
+
+
+<!-- white card box  -->
+<section id="whiteBox">
+    <div class="whiteCardBox">
+    <h2>From Humble Beginnings to Ice Cream Excellence: The Story of Naturals Ice Cream</h2>
+<p>In the sizzling streets of 1984 Mumbai, amid the tantalizing scent of Pav Bhaji and scorching sun, a young visionary named Mr. Raghunandan Srinivas Kamath embarked on a daring journey. Little did he know that his simple idea would transform into an exhilarating Indian sensation – Naturals Ice Cream, making him the pioneer of handcrafted icecream from quintessential fruit-based flavors such as Sitaphal, Tender Coconut, Jackfruit, Muskmelon and Kala Jamun, amongst many more.</p>
+<div class="btnCenter">
+    <button class="greenBTN">READ MORE</button>
+    </div>
+</div>
+</section>
+
+<section id="orderHere">
+    <div class="orderOnline">
+    <button class="btnBlack">Order Now</button>
+    <p>Also available on</p>
+    <div class="onlineStore">
+    <img src="./assets/swiggy.png" alt="swiggy" />
+    <img src="./assets/zomato.png" alt="zomato" />
+    </div>
+    </div>
+</section>
 </body>
 </html>
